--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="hea">
-        <img src="images/9aed05fbe8434bfdb67543d0a3588844.png" class="center" >
+        <img src="9aed05fbe8434bfdb67543d0a3588844.png" class="center" >
 
    
     </div>
@@ -35,7 +35,7 @@
     </header>
      <main id="main">
          <div class="movie">
-             <img src="images/istockphoto.jpg" alt="images">
+             <img src="istockphoto.jpg" alt="images">
             <div class="movie-info">
                 <h3>Movie Title</h3>
                 <span class="green">9.8</span>
